# theopomies.github.io

./: .gitignore  .nojekyll  CNAME  _quarto.yml  _quarto_internal_scss_error.scss  about.html  about.qmd  experiment.html  experiment.ipynb  flake.nix  index.html  index.ipynb  index.qmd  index.quarto_ipynb  listings.json  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  strip-xref-numbers.lua  styles.scss  theopoimandres-light.scss  theopoimandres-light.theme  theopoimandres.scss  theopoimandres.theme
.well-known/: discord
journal/: 2025-08-28.html  2025-08-28.qmd  2025-08-29.html  2025-08-29.qmd  2025-09-01.html  2025-09-01.qmd  2025-09-02.html  2025-09-02.qmd  2025-09-03.html  2025-09-03.qmd  2025-09-04.html  2025-09-04.qmd  2025-09-05.html  2025-09-05.qmd  2025-09-08.html  2025-09-08.qmd  2025-09-09.html  2025-09-09.qmd  2025-09-10.html  2025-09-10.qmd  2025-09-11.html  2025-09-11.qmd  2025-09-12.html  2025-09-12.qmd  2025-09-13.html  2025-09-13.qmd  2025-09-15.html  2025-09-15.qmd  2025-09-16.html  2025-09-16.qmd  2025-09-17.html  2025-09-17.qmd  2025-09-18.html  2025-09-18.qmd  2025-09-19.html  2025-09-19.qmd  2025-09-22.html  2025-09-22.qmd  2025-09-23.html  2025-09-23.qmd  (+21 more)
notebooks/: test.html  test.ipynb
notes/: calculus.html  calculus.qmd  distributed-training.html  distributed-training.qmd  dive-into-deep-learning.html  dive-into-deep-learning.ipynb  index.html  index.qmd  index.xml  khan-academy.html  khan-academy.qmd  linear-algebra.html  linear-algebra.qmd  probability.html  probability.qmd  pytorch.html  pytorch.qmd  typescript.html  (+1 more)
(+30 files in other folders)
