[project]
name = "theopomies-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
    "manim-slides[pyside6-full]>=5.5.1",
    "marimo>=0.15.0",
    "matplotlib>=3.10.5",
    "mlx>=0.28.0",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
